# incalo

./: .env.example  .gitignore  API.md  Cargo.toml  Dockerfile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
incalo_server/: Cargo.toml  Dockerfile  docker-compose.yml
incalo_server/nginx/conf.d/: default.conf
incalo_server/src/: main.rs
incalo_server/src/routes/: api.rs  mod.rs
incalo_server/src/routes/api/: oauth.rs
src/: auth.rs  config.rs  main.rs  model.rs
src/routes/: oauth.rs  users.rs
