[package]
name = "incalo-server"
version = "0.1.0"
authors = ["Seungjae Park <astro.psj@gmail.com>"]
edition = "2018"
description = ""
documentation = "https://docs.rs/incalo"
readme = "README.md"
repository = "https://github.com/incalc/incalo"
license = "Apache-2.0"
publish = false

[dependencies]
async-std = { version = "1.6.3", features = ["attributes"] }
chrono = "0.4.15"
jsonwebtoken = "7.2.0"
rust-argon2 = "0.8.2"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
sqlx = { version = "0.4.0-beta.1", features = ["mysql"] }
tide = "0.13.0"
time = "0.2.17"

[profile.release]
lto = true
