[package]
name = "incalo-server"
version = "0.1.0"
authors = ["Seungjae Park <astro.psj@gmail.com>"]
edition = "2018"
description = ""
documentation = "https://docs.rs/incalo"
readme = "README.md"
repository = "https://github.com/incalc/incalo"
license = "Apache-2.0"
publish = false

[dependencies]
async-std = { version = "1.6", features = ["attributes"] }
httparse = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.6"
time = "0.2"
